--- a/views/jordan.handlebars
+++ b/views/jordan.handlebars
@@ -8,10 +8,10 @@
 </section> -->
   <header>
     <div class="row content-section">
-      <div class="col-third">
+      {{!-- <div class="col-third">
         <img src="http://placehold.it/300x100" alt="">
-      </div>
-      <div class="col-md-8 col-xs-12">
+      </div> --}}
+      <div class="col-xs-12">
         <h1>
         {{ title }}<br>
           <span class="subhead">{{ hero.detail.make.name }} {{ hero.detail.model.name }} vs. {{ villain.detail.make.name }} {{ villain.detail.model.name }}</span>
@@ -236,7 +236,6 @@
               </div><!-- #info2 -->
 
               <div id="info3" class="col-full content-section">
-                <div class="row">
                   <div class="col-xs-12">
                     <h2>{{ hero.detail.make.name }} {{ hero.detail.model.name }} Consumer Reviews: </h2>
                     <p class="lead">
